--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -14,16 +14,81 @@ header {
   margin: auto;
 }
 
+nav {
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  border-bottom: 2px solid #000000;
+  border-top: 2px solid #000000;
+  text-align: center;
+  font-weight: 600;
+  font-size: 14px;
+  position: fixed;
+  width: 100%;
+  max-width: 100vw;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+}
+nav a {
+  float: left;
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:not(:first-child) {
+  display: none;
+}
+
+.topnav a.icon {
+  float: right;
+  display: block;
+}
+
+.topnav.responsive #icon-wrapper {
+  padding: 14px 16px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: left;
+}
+
+#icon-wrapper {
+  float: right;
+}
+#icon-wrapper a {
+  display: inline;
+}
+
+a {
+  text-decoration: none;
+}
+
 main {
   max-width: 1600px;
   margin: auto;
+}
+
+footer {
+  background-color: #447019;
+  width: 100%;
+  min-height: 100px;
 }
 
 section {
   margin: 1rem;
 }
 
-.item-container {
+.item-container, .container-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   margin: 0;
@@ -38,6 +103,7 @@ article {
   width: 100%;
   padding: 0.5rem;
   font-family: "Open Sans", sans-serif;
+  margin: 0.5rem 0 1.5rem 0;
 }
 
 h1 {
@@ -61,6 +127,26 @@ h2 {
 
 h3 {
   padding-top: 0.5rem;
+}
+
+aside h3 {
+  margin: 1rem;
+}
+
+.aside-item {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  margin: 1rem;
+}
+.aside-item img {
+  max-height: 80px;
+}
+.aside-item .aside-text {
+  max-width: 100%;
+  padding: 0.4rem;
+}
+.aside-item .aside-text p {
+  font-size: 0.9rem;
 }
 
 .page-breadcrumbs {
@@ -94,6 +180,9 @@ h3 {
 .border-container {
   padding: 1rem;
   border: 2px solid #fff;
+  max-width: 400px;
+  max-height: 200px;
+  margin: 0 1rem;
 }
 
 .recipe-details-wrapper {
@@ -234,12 +323,164 @@ i {
     opacity: 1;
   }
 }
-.one-ingredient {
+.one-item {
   display: inline;
 }
 
-.ingredient-wrapper {
+.checkbox-wrapper {
   padding: 0.5rem 0;
+}
+
+#signup-subpage {
+  height: 100vh;
+  overflow-y: hidden;
+}
+
+#signup-wrapper {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../photos/signup.jpg");
+  background-size: cover;
+  margin: 0;
+}
+#signup-wrapper h1 {
+  color: #fff;
+  border: none;
+}
+#signup-wrapper #form-wrapper {
+  background-color: transparent;
+  margin: 0 auto;
+  position: relative;
+  top: 30%;
+  max-width: 300px;
+}
+#signup-wrapper input {
+  display: block;
+  margin: 0.5rem auto;
+  width: 100%;
+  padding: 0.5rem;
+  border: 2px solid #000000;
+  font-family: "Open Sans", sans-serif;
+}
+#signup-wrapper button {
+  width: 100%;
+  padding: 1rem 0;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  background-color: #A5D145;
+  font-weight: 600;
+}
+#signup-wrapper .log-in {
+  color: white;
+  font-weight: 600;
+  text-shadow: 2px 2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, -2px -2px 0 #000000, 2px 0px 0 #000000, 0px 2px 0 #000000, -2px 0px 0 #000000, 0px -2px 0 #000000, 0px 0px 10px rgba(0, 0, 0, 0);
+}
+
+#settings-headings a {
+  display: block;
+  color: #000000;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  border-top: 2px solid #000000;
+  text-align: center;
+  padding: 5px 0;
+  margin: 0 1rem;
+}
+#settings-headings a:last-of-type {
+  border-bottom: 2px solid #000000;
+}
+
+.settings {
+  padding: 2rem;
+  max-width: 700px;
+  margin: auto;
+}
+.settings input {
+  display: block;
+  margin: 0.5rem auto;
+  width: 100%;
+  padding: 0.5rem;
+  border: 2px solid #000000;
+  font-family: "Open Sans", sans-serif;
+}
+.settings button {
+  width: 100%;
+  padding: 1rem 0;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  background-color: #A5D145;
+  font-weight: 600;
+}
+.settings form {
+  max-width: 400px;
+  margin: auto;
+}
+
+@media screen and (min-width: 720px) {
+  #home-page main, .recipe-subpage main {
+    display: grid;
+    grid-template-columns: 30% 70%;
+  }
+
+  .topnav {
+    padding: 17px 0;
+  }
+
+  .topnav#navigation a {
+    float: none;
+    display: inline;
+  }
+
+  .topnav#navigation a.icon {
+    display: none;
+  }
+
+  #settings-wrapper {
+    display: grid;
+    grid-template-columns: 30% 70%;
+  }
+}
+@media screen and (min-width: 1048px) {
+  #signup-subpage {
+    max-height: 100vh;
+  }
+
+  #signup-wrapper {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    background: transparent;
+  }
+  #signup-wrapper h1 {
+    color: #000000;
+  }
+  #signup-wrapper #image-wrapper {
+    background-image: url("../photos/signup.jpg");
+    background-size: cover;
+    margin: 0;
+  }
+  #signup-wrapper #form-wrapper {
+    max-width: 450px;
+    width: 40%;
+  }
+  #signup-wrapper .log-in {
+    text-shadow: none;
+    color: black;
+  }
+
+  .aside-item img {
+    max-height: 180px;
+  }
+}
+@media screen and (min-width: 1320px) {
+  aside {
+    padding-top: 2rem;
+  }
+
+  #settings-subpage footer {
+    position: fixed;
+    bottom: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
