--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -27,9 +27,75 @@ header {
     margin: auto;  
 }
 
+nav {
+    font-family: $montserrat;
+    text-transform: uppercase;
+    font-weight: 600;
+    border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+    position: fixed;
+    width: 100%;
+    max-width: 100vw;
+    background-color: $white;
+    top: 0;
+    left: 0;
+
+    a {
+        float: left;
+        display: block;
+        color: $black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+
+    }
+}
+
+
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+
+    .topnav.responsive #icon-wrapper {
+        padding: 14px 16px;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+
+    #icon-wrapper {
+        float: right;
+
+        a {
+            display: inline;
+        }
+    }
+
+
+a {
+    text-decoration: none;
+}
+
 main {
     max-width: 1600px;
     margin: auto;
+}
+
+footer {
+    background-color: $dark-green;
+    width: 100%;
+    min-height: 100px;
 }
 
 section {
@@ -37,7 +103,7 @@ section {
 
 }
 
-.item-container {
+.item-container, .container-wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     margin: 0;
@@ -52,6 +118,7 @@ article {
     width: 100%;
     padding: 0.5rem;
     font-family: $open-sans;
+    margin: 0.5rem 0 1.5rem 0;
 }
 
 h1 {
@@ -75,6 +142,31 @@ h2 {
 
 h3 {
     padding-top: 0.5rem;
+}
+
+aside {
+    h3 {
+        margin: 1rem;
+    }
+}
+
+.aside-item {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    margin: 1rem;
+
+    img {
+        max-height: 80px;
+    }
+
+    .aside-text {
+        max-width: 100%;
+        padding: 0.4rem;
+
+        p {
+            font-size: 0.9rem;
+        }
+    }
 }
 
 .page-breadcrumbs {
@@ -108,6 +200,9 @@ h3 {
 .border-container {
     padding: 1rem;
     border: 2px solid $white;
+    max-width: 400px;
+    max-height: 200px;
+    margin: 0 1rem;
 }
 
 .recipe-details-wrapper {
@@ -191,6 +286,8 @@ i {
     height: 15px;
     width: 15px;
 }
+
+// Slideshow styling for the header
 .slideshow-container {
     position: relative;
     margin: auto;
@@ -255,10 +352,204 @@ i {
     to {opacity: 1}
   }
 
-.one-ingredient {
+.one-item {
     display: inline;
 }
 
-.ingredient-wrapper {
+.checkbox-wrapper {
     padding: 0.5rem 0;
+}
+
+// Signup page
+
+
+#signup-subpage {
+    height: 100vh;
+    overflow-y: hidden;
+}
+
+#signup-wrapper {
+    width: 100%;
+    height: 100vh;
+    background-image: url("../photos/signup.jpg");
+    background-size: cover;
+    margin: 0;
+
+    h1 {
+        color: $white;
+        border: none;
+    }
+
+    #form-wrapper {
+        background-color: transparent;
+        margin: 0 auto;
+        position: relative;
+        top: 30%;
+        max-width: 300px;
+
+    }
+
+    input {
+        display: block;
+        margin: 0.5rem auto;
+        width: 100%;
+        padding: 0.5rem;
+        border: 2px solid $black;
+        font-family: $open-sans;
+    }
+
+    button {
+    width:100%;
+    padding: 1rem 0;
+    font-family: $montserrat;
+    text-transform: uppercase;
+    background-color: $medium-green;
+    font-weight: 600;
+    }
+
+    
+    .log-in {
+        color: white;
+        font-weight: 600;
+        text-shadow: 2px 2px 0 $black, 2px -2px 0 $black, -2px 2px 0 $black, -2px -2px 0 $black, 2px 0px 0 $black, 0px 2px 0 $black, -2px 0px 0 $black, 0px -2px 0 $black, 0px 0px 10px rgba(0,0,0,0);
+    }
+}
+
+
+// Settings page
+
+#settings-headings {
+    a {
+        display: block;
+        color: $black;
+        font-family: $montserrat;
+        text-transform: uppercase;
+        font-weight: 600;
+        border-top: 2px solid $black;
+        text-align: center;
+        padding: 5px 0;
+        margin: 0 1rem;
+    }
+
+    a:last-of-type {
+        border-bottom: 2px solid $black;
+    }
+}
+
+.settings {
+    padding: 2rem; 
+    max-width: 700px;
+    margin: auto;
+    input {
+        display: block;
+        margin: 0.5rem auto;
+        width: 100%;
+        padding: 0.5rem;
+        border: 2px solid $black;
+        font-family: $open-sans;
+        
+    }
+
+    button {
+        width:100%;
+        padding: 1rem 0;
+        font-family: $montserrat;
+        text-transform: uppercase;
+        background-color: $medium-green;
+        font-weight: 600;
+        }
+
+        form {
+            max-width: 400px;
+            margin: auto;
+        }
+    }
+
+
+// Media queries
+
+@media screen and (min-width: 720px) {
+
+
+
+    #home-page main, .recipe-subpage main{
+        display: grid;
+        grid-template-columns: 30% 70%;
+    }
+
+    .topnav {
+        padding: 17px 0
+    }
+
+    
+        .topnav#navigation a {
+            float: none;
+            display: inline;
+        }
+
+    .topnav#navigation a.icon {
+        display: none;
+    }
+
+
+    #settings-wrapper {
+        display: grid;
+        grid-template-columns: 30% 70%;
+    }
+
+}
+
+
+@media screen and (min-width: 1048px) {
+    #signup-subpage {
+        max-height: 100vh;
+    }
+    #signup-wrapper {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        background: transparent;
+
+        h1 {
+            color: $black;
+        }
+
+        #image-wrapper {
+            background-image: url("../photos/signup.jpg");
+            background-size: cover;
+            margin: 0;
+        }
+
+
+        #form-wrapper {
+            max-width: 450px;
+            width: 40%;
+        }
+
+        .log-in {
+            text-shadow: none;
+            color: black;
+        }
+
+    }
+
+    .aside-item {
+        img {
+            max-height: 180px;
+        }
+    }
+}
+
+@media screen and (min-width: 1320px) {
+
+
+aside {
+    padding-top: 2rem;
+}
+
+#settings-subpage {
+    footer {
+        position: fixed;
+        bottom: 0;
+    }
+}
 }
