--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,6 +7,10 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+    margin: 0 auto 0;
+    padding: 0 15px;
+    width: 100%;
+    max-width: 1290px;
 }
 
 header {
@@ -24,7 +28,7 @@ nav {
   text-align: center;
   font-weight: 600;
   font-size: 14px;
-  position: fixed;
+  /*position: fixed;*/
   width: 100%;
   max-width: 100vw;
   background-color: #fff;
@@ -54,10 +58,27 @@ nav .header-logo {
   display: flex;
   justify-content: flex-start;
 }
-
+.logo {
+  overflow: hidden;
+  margin: 15px 0 5px;
+  width: 454px;
+  float: left;
+}
 nav .header-logo img {
   width: 160px;
   height: auto;
+}
+.header-stuff {
+	float: right;
+    width: 100%;
+    text-align: right;
+    margin-top: 30px;
+    margin-bottom: 0;
+    height: 105px;
+}
+.header {
+  margin-bottom: 0;
+  height: 105px;
 }
 fieldset {
   border: none;
@@ -134,6 +155,11 @@ article {
   padding: 0.5rem;
   font-family: "Open Sans", sans-serif;
   margin: 0.5rem 0 1.5rem 0;
+  border: 2px solid #2A2A2A;
+}
+#search:focus {
+  outline: none;
+	border: 2px solid #D9AB23;
 }
 .search_area {
   max-width: 450px;
@@ -190,6 +216,10 @@ h2 {
 
 h3 {
   padding-top: 0.5rem;
+}
+h4 {
+  font-family: "Montserrat", sans-serif;
+  color: #447019;
 }
 
 aside h3 {
@@ -335,6 +365,8 @@ i {
 .mySlides {
   display: none;
   height: 40vh;
+  background-size: cover;
+  background-position: center;
 }
 
 .mySlides:first-of-type {
@@ -348,7 +380,7 @@ i {
 }
 
 .mySlides:nth-of-type(3) {
-  background-image: url("../photos/header3.jpeg");
+  background-image: url("../photos/header3.png");
   background-size: cover;
 }
 
@@ -424,7 +456,7 @@ i {
   position: relative;
   padding: 15px 20px 20px;
   border-radius: 20px;
-  top: 30%;
+  top: 10%;
   max-width: 300px;
   background-color: #ffff;
 }
@@ -505,12 +537,22 @@ i {
   display: block !important;
   padding: 14px 10px;
 }
+.header-logo-desktop {
+  display: none!important;
+}
+.icons-desktop{
+  display: none;
+}
+.icons-desktop a:hover{
+  color: #D9AB23;
+  cursor: pointer;
+}
 
 @media screen and (min-width: 720px) {
   #home-page main,
   #fav-page main {
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: none;
   }
   .recipe-subpage main {
     display: grid;
@@ -530,7 +572,19 @@ i {
     float: none;
     display: inline;
   }
-
+  .topnav#navigation a:hover{
+    color: #A5D145;
+}
+  .header-logo-desktop {
+    display: none!important;
+  }
+  .mySlides:first-of-type {
+    background-image: url("../photos/header1.jpeg");
+    background-size: cover;
+    background-position: right;}
+  .header-desktop{
+    display: none;
+  }
   /* label {
     color: #fff;
   } */
@@ -553,8 +607,18 @@ i {
     width: 100%;
     margin: 1rem;
   }
+ .header-logo-desktop {
+    display: hidden;
+  }
+
+}
+@media screen and (min-width: 393px){
+.header-logo-desktop {
+    display: hidden!important;
+  }
 }
 @media screen and (min-width: 1048px) {
+
   #signup-subpage {
     max-height: 100vh;
   }
@@ -586,15 +650,52 @@ i {
   .aside-item img {
     max-height: 180px;
   }
+.header-logo-desktop {
+    display: hidden!important;
+  }
 }
 @media screen and (min-width: 1320px) {
   aside {
     padding-top: 2rem;
   }
-
+.header-logo-desktop {
+  display: block!important;
+  overflow: hidden;
+  margin: 15px 0 5px;
+  width: 275px;
+  }
+  #navigation img{
+    display: none;
+  }
   #settings-subpage footer {
     position: fixed;
     bottom: 0;
+  }
+  #icon-wrapper{
+    display: none;
+  }
+  .topnav {
+    padding: 17px 0;
+    /* text-align: center; */
+    justify-content: center;
+  }
+  .topnav a{
+    margin: 7px 60px 7px 0px;
+    padding: 0 0 3px;
+    position: relative;
+  }
+  .header-desktop{
+    display: flex;
+    justify-content: space-between;
+  }
+  .icons-desktop{
+    margin-top: 25px;
+    display: flex;
+  }
+  .icons-desktop a{
+    padding: 10px;
+    font-size: 25px;
+    
   }
 }
 
